--- a/my.css
+++ b/my.css
@@ -1,10 +1,13 @@
 
       body {
-          background-color: black;
+          background-color: #008EFF;
       }
       div {
-        width: 500px;
-        height: 300px;
+        width: 1000px;
+        height: 700px;
         margin: auto;
-        margin-top: 30px;
+        margin-top: 100px;
+        border: solid 1px white;
+        border-radius: 10px;
+        background-color: white;
       }
