--- a/my.css
+++ b/my.css
@@ -1,13 +1,10 @@
 
-      body {
-          background-color: #008EFF;
-      }
-      div {
-        width: 1000px;
-        height: 700px;
-        margin: auto;
-        margin-top: 100px;
-        border: solid 1px white;
-        border-radius: 10px;
-        background-color: white;
-      }
+.title {
+  /* height: 100%; */
+  background-color: #242424;
+}
+h1 {
+  margin-top: 25%;
+  font-weight: bold;
+  text-align: center;
+}
