--- a/my.css
+++ b/my.css
@@ -1,10 +1,35 @@
 
-.title {
-  /* height: 100%; */
+html, #title {
+  height: 100%;
   background-color: #242424;
 }
+#title_center {
+  width: 300px;
+  margin: auto;
+  margin-top: 20%;
+}
 h1 {
-  margin-top: 25%;
   font-weight: bold;
   text-align: center;
+}
+#lineEdit {
+  width: 300px;
+  height: 40px;
+  font-size: 24px;
+  color: dimgrey;
+  background-color: #242424;
+  border: solid 1px black;
+  border-radius: 15px;
+  padding-left: 32px;
+}
+#search {
+  position: relative;
+  width: 33px;
+  height: 33px;
+  background-color: transparent;
+  background-image: url("search.png");
+  background-repeat: no-repeat;
+  border: solid 0px;
+  bottom: 36px;
+  left: 3px;;
 }
