--- a/my.css
+++ b/my.css
@@ -12,6 +12,9 @@ h1 {
   font-weight: bold;
   text-align: center;
 }
+input:focus {
+  outline: none;
+}
 #lineEdit {
   width: 300px;
   height: 40px;
