--- a/my.css
+++ b/my.css
@@ -14,8 +14,8 @@ h1 {
 }
 input:focus {
   outline: none;
-  -webkit-tap-highlight-color:rgba(0,0,0,0);
-  -webkit-user-modify:read-write-plaintext-only;
+  /*-webkit-tap-highlight-color:rgba(0,0,0,0);*/
+  /*-webkit-user-modify:read-write-plaintext-only;*/
 }
 #lineEdit {
   width: 300px;
