--- a/my.css
+++ b/my.css
@@ -1,7 +1,24 @@
-
-html, #title {
-  height: 100%;
+html {
+  background-image: url("bg.gif");
+}
+.titleDark {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
   background-color: #242424;
+  border: solid 1px #242424;
+}
+select {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.selDark {
+  color: darkgray;
+  background-color: #242424;
+}
+.selLight {
+  background-color: aliceblue;
 }
 #title_center {
   width: 300px;
@@ -48,4 +65,16 @@ input:focus {
   border: solid 0px;
   bottom: 36px;
   left: 3px;
+}
+#fristImage {
+  width: 650px;
+  margin: auto;
+  margin-top: 20px;
+  border: solid 1px aliceblue;
+  border-top: solid 5px red;
+  background: rgba(192, 192, 192, 0.7);
+}
+img {
+  width: 650px;
+  height: 300px;
 }
