--- a/my.css
+++ b/my.css
@@ -69,7 +69,7 @@ input:focus {
   bottom: 36px;
   left: 3px;
 }
-#fristImage {
+#imgdiv {
   width: 650px;
   margin: auto;
   margin-top: 20px;
@@ -77,7 +77,11 @@ input:focus {
   border-top: solid 5px red;
   background: rgba(192, 192, 192, 0.7);
 }
+#img {
+  width: 650px;
+}
 img {
   width: 650px;
   height: 300px;
 }
+
