--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ p {
     transform-style: preserve-3d;
     width: 300px;
     height: 300px;
+    margin-right: 10px;
     /*鼠标样式为小手*/
     cursor: pointer;
     background-color: white;
@@ -81,3 +82,33 @@ p {
         transform: rotateX(180deg);
     }
 }
+.pic {
+    position: relative;
+    overflow: hidden;
+    width: 300px;
+    height: 300px;
+    background-color: white;
+}
+.source {
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+}
+.target {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 100%;
+    background-color: red;
+    animation: updown 1s ease 
+}
+@keyframes updown {
+    from {
+	transform: translateY(100%);
+    }
+    to {
+	transform: translateY(-100%);
+    }
+}
+
+
