--- a/index.css
+++ b/index.css
@@ -48,6 +48,7 @@ body {
     width: 300px;
     height: 300px;
     margin-right: 10px;
+    background-image:url(./IMG_20210329_152034.jpg);
     /*设置动画属性：名称，过渡时间，线性，起始时间，次数，结束状态*/
     animation: rotate 1s cubic-bezier(.76, -0.51, .29, 1.5) 1s infinite forwards;
 }
@@ -61,15 +62,12 @@ body {
     line-height: 300px;
 }
 .card_font {
-    background-color: blue!important;
     background-image:url(./IMG_20210329_152034.jpg);
     background-size: cover;
-    z-index: 1;
 }
 /*背面卡片翻转180deg*/
 .card_back {
     transform: rotateX(180deg);
-    background-color: red!important;
     background-image:url(./IMG_20210329_152222.jpg);
     background-size: cover;
 }
